--- a/AssignmentsAll/SalaryCalculator/index.html
+++ b/AssignmentsAll/SalaryCalculator/index.html
@@ -46,27 +46,27 @@
         <div id="loader" class="container"></div>
       </div>
       <div
-        class="container mb-5 rounded-bottom-5 w-50 mt-2 py-5 text-start"
+        class="container mb-5 rounded-bottom-5 w-50 mt-2 py-5 text-start px-5"
         style="background-color: aquamarine; border: 2px solid #000"
       >
         <p class="my-2">
           <label for="basic" class="fs-5 fw-bold">Your Basic Salary:</label
-          ><span class="fs-5 fw-bold" id="basic">___</span>
+          ><span class="fs-5 fw-bold float-end" id="basic">___</span>
         </p>
         <p class="my-2">
           <label for="hra" class="fs-5 fw-bold">Your HRA:</label
-          ><span class="fs-5 fw-bold" id="hra">___</span>
+          ><span class="fs-5 fw-bold float-end" id="hra">___</span>
         </p>
         <p class="my-2">
           <label for="da" class="fs-5 fw-bold">Your DA:</label
-          ><span class="fs-5 fw-bold" id="da">___</span>
+          ><span class="fs-5 fw-bold float-end" id="da">___</span>
         </p>
         <p class="my-2">
           <label for="gross" class="fs-5 fw-bold"
             >Your Total Gross Salary:</label
-          ><span class="fs-5 fw-bold" id="gross">___</span>
+          ><span class="fs-5 fw-bold float-end" id="gross">___</span>
         </p>
-        <p class="mt-5">
+        <p class="mt-5 text-center">
           <span class="fs-5 fw-bolder text-success" id="done"></span>
         </p>
       </div>
