--- a/Jokes/index.html
+++ b/Jokes/index.html
@@ -21,7 +21,8 @@
         Jokes Ka Pitara
     </div>
 
-    <main>
+    <main class="container w-50">
+    
         <div class="container p-3 border shadow mt-3 rounded-3">
             <!-- area for Jokes -->
              <p class="" id="setup"></p>
