--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -26,6 +26,9 @@
 
     <main>
       <div class="container w-50 mx-auto border-1 rounded-3 shadow p-3 mt-3 py-4">
+        <div class="container opacity-50 text-dark fw-bold fs-4 text-center my-2">
+        Get Live Update Of Weather In Your Area!
+      </div>
         <div class="d-flex gap-3">
           <input type="text" name="city" class="form-control" id="city" placeholder="City Name">
         <button class="btn btn-primary w-25 fw-bold form-control" onclick="getWeather()">Get Weather</button>
