--- a/ComplaintBox/index.html
+++ b/ComplaintBox/index.html
@@ -1,42 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body style="background-color: aqua;">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Raise Your Complaint Here</title>
 
-    <div  class="navbar fixed-top d-flex justify-content-center mb-5 fs-1 text-light fw-bold" style="background-color: darkgoldenrod;">
-      Raise Your Complaint Here
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      min-height: 100vh;
+      background: #f4f6f9;
+      color: #222;
+    }
+
+    /* NAVBAR */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 15px 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      backdrop-filter: blur(12px);
+      background: rgba(255,255,255,0.6);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
+
+    .logo {
+      font-size: 22px;
+      font-weight: 700;
+      color: #0d6efd;
+    }
+
+    .nav-links a {
+      margin: 0 12px;
+      text-decoration: none;
+      font-weight: 500;
+      color: #333;
+      cursor: pointer;
+    }
+
+    .nav-links a:hover {
+      color: #0d6efd;
+    }
+
+    .auth-buttons button {
+      margin-left: 10px;
+      padding: 8px 16px;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    .login {
+      background: transparent;
+      color: #0d6efd;
+      border: 1px solid #0d6efd;
+    }
+
+    .signup {
+      background: #0d6efd;
+      color: #fff;
+    }
+
+    /* SECTIONS */
+    section {
+      padding: 120px 80px 80px;
+      display: none;
+    }
+
+    section.active {
+      display: block;
+    }
+
+    /* HOME */
+    #home {
+      min-height: 100vh;
+      background: url('https://images.unsplash.com/photo-1520607162513-77705c0f0d4a') center/cover no-repeat;
+      position: relative;
+      color: #fff;
+    }
+
+    #home::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.6);
+      backdrop-filter: blur(5px);
+    }
+
+    .home-content {
+      position: relative;
+      max-width: 800px;
+    }
+
+    .home-content h1 {
+      font-size: 42px;
+      margin-bottom: 20px;
+    }
+
+    .home-content p {
+      font-size: 16px;
+      line-height: 1.8;
+    }
+
+    .raise-btn {
+      margin-top: 25px;
+      padding: 12px 28px;
+      font-size: 16px;
+      border-radius: 30px;
+      border: none;
+      background: #0d6efd;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* COMPLAINT FORM */
+    .form-card {
+      background: #fff;
+      max-width: 600px;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    }
+
+    .form-card h2 {
+      margin-bottom: 15px;
+      color: #0d6efd;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group input,
+    .form-group textarea,
+    .form-group select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+
+    .submit-btn {
+      width: 100%;
+      padding: 12px;
+      background: #0d6efd;
+      color: #fff;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    /* STATUS */
+    .status-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      max-width: 500px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    /* FOOTER */
+    footer {
+      background: #0d6efd;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    /* RESPONSIVE */
+    @media(max-width: 768px) {
+      .navbar { padding: 15px 20px; }
+      section { padding: 120px 20px; }
+      .home-content h1 { font-size: 30px; }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- NAVBAR -->
+  <div class="navbar">
+    <div class="logo">Raise Your Complaint Here</div>
+    <div class="nav-links">
+      <a onclick="showSection('home')">Home</a>
+      <a onclick="showSection('complaint')">Complaint</a>
+      <a onclick="showSection('help')">Help</a>
+      <a onclick="showSection('status')">Status</a>
+      <a onclick="showSection('contact')">Contact</a>
     </div>
-
-    <div class="container w-75 bg-primary mt-5" >
-      hy
-
+    <div class="auth-buttons">
+      <button class="login">Login</button>
+      <button class="signup">Sign Up</button>
     </div>
+  </div>
 
+  <!-- HOME -->
+  <section id="home" class="active">
+    <div class="home-content">
+      <h1>Your Voice Matters</h1>
+      <p>
+        A complaint is a powerful way to express concerns and demand accountability.
+        Raising complaints helps improve systems, ensure transparency, and protect rights.
+        This platform allows you to submit, track, and resolve complaints professionally.
+      </p>
+      <button class="raise-btn" onclick="showSection('complaint')">Raise Complaint</button>
+    </div>
+  </section>
 
+  <!-- COMPLAINT -->
+  <section id="complaint">
+    <div class="form-card">
+      <h2>Submit Complaint</h2>
+      <div class="form-group">
+        <input type="text" id="name" placeholder="Your Name" />
+      </div>
+      <div class="form-group">
+        <input type="email" id="email" placeholder="Your Email" />
+      </div>
+      <div class="form-group">
+        <select id="category">
+          <option value="">Select Category</option>
+          <option>Education</option>
+          <option>Infrastructure</option>
+          <option>Service</option>
+          <option>Other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <textarea id="message" rows="4" placeholder="Describe your complaint"></textarea>
+      </div>
+      <button class="submit-btn" onclick="submitComplaint()">Submit</button>
+      <p id="formMsg"></p>
+    </div>
+  </section>
 
+  <!-- HELP -->
+  <section id="help">
+    <div class="status-box">
+      <h2>Need Help?</h2>
+      <p>Email: support@complaintbox.com</p>
+      <p>Call: +91 98765 43210</p>
+    </div>
+  </section>
 
+  <!-- STATUS -->
+  <section id="status">
+    <div class="status-box">
+      <h2>Complaint Status</h2>
+      <input type="text" id="trackId" placeholder="Enter Complaint ID" />
+      <button class="submit-btn" style="margin-top:15px" onclick="checkStatus()">Check</button>
+      <p id="statusResult"></p>
+    </div>
+  </section>
 
+  <!-- CONTACT -->
+  <section id="contact">
+    <div class="status-box">
+      <h2>Contact Us</h2>
+      <p>We value your feedback and trust.</p>
+    </div>
+  </section>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js"></script>
-  </body>
+  <!-- FOOTER -->
+  <footer>
+    Email: sumitmeena6944@gmail.com
+  </footer>
+
+  <script>
+    function showSection(id) {
+      document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+      window.scrollTo(0,0);
+    }
+
+    function submitComplaint() {
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const msg = document.getElementById('message').value;
+
+      if(!name || !email || !msg) {
+        document.getElementById('formMsg').innerText = 'Please fill all required fields.';
+        document.getElementById('formMsg').style.color = 'red';
+        return;
+      }
+
+      const id = 'CMP' + Math.floor(Math.random() * 100000);
+      localStorage.setItem(id, 'Pending');
+      document.getElementById('formMsg').innerHTML = `Complaint Submitted. Your ID: <b>${id}</b>`;
+      document.getElementById('formMsg').style.color = 'green';
+    }
+
+    function checkStatus() {
+      const id = document.getElementById('trackId').value;
+      const status = localStorage.getItem(id);
+      document.getElementById('statusResult').innerText = status ? `Status: ${status}` : 'Invalid Complaint ID';
+    }
+  </script>
+</body>
 </html>
