--- a/ComplaintBox/index.html
+++ b/ComplaintBox/index.html
@@ -311,7 +311,7 @@
     function checkStatus() {
       const id = document.getElementById('trackId').value;
       const status = localStorage.getItem(id);
-      document.getElementById('statusResult').innerText = status ? `Status: ${status}` : 'Invalid Complaint ID';
+      document.getElementById('statusResult').innerText = status ? `Status: ${status}` : 'Invalid Complaint ID, Retry!';
     }
   </script>
 </body>
