--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attendance</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -11,17 +11,20 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-    <div class="container">
-
-        <div class="">
-
+  </head>
+  <body>
+    <div class="container w-75" style="background-color: rgb(192, 134, 246)">
+      <div class="container w-50" style="background-color: rgb(21, 21, 86)">
+        <div class="d-flex justify-content-between w-50">
+          <p class="w-75">Sumit Meena</p>
+          <div class="d-flex w-75">
+            <div class="w-25 bg-success rounded-2 text-center">P</div>
+            <div class="w-25 bg-danger rounded-2 text-center">A</div>
+          </div>
         </div>
-
+      </div>
     </div>
-    
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -29,5 +32,5 @@
     ></script>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
