--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="container w-75" style="background-color: rgb(192, 134, 246)">
       <div class="container w-50 ps-5" style="background-color: rgb(21, 21, 86)">
-        <div class="d-flex justify-content-between align-content-center">
-          <p class="w-100 text-light align-content-center fs-4">Sumit Meena</p>
+        <div class="d-flex justify-content-between align-content-center" id="data">
+          <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
           <div class="d-flex w-75 float-end">
-            <div class="w-25 mx-2 bg-success rounded-2 text-center align-content-center fw-bold fs-4">P</div>
-            <div class="w-25 bg-danger rounded-2 text-center align-content-center fw-bold fs-4">A</div>
+            <div class="w-25 mx-2 bg-success rounded-2 text-center align-content-center fw-bold fs-4" id="p">P</div>
+            <div class="w-25 bg-danger rounded-2 text-center align-content-center fw-bold fs-4" id="a">A</div>
           </div>
         </div>
       </div>
