--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -14,6 +14,11 @@
   </head>
   <body>
     <div class="container w-75" style="background-color: rgb(192, 134, 246)">
+      <div class="container d-flex fw-bold fs-3 text-center ">
+          Mark Attendance
+          <button class="btn btn-success fw-bold fs-5" onclick="submit()">Submit</button> 
+          <button class="btn btn-primary fw-bold fs-5" onclick="add()">Add Student</button> 
+      </div>
       <div class="container w-50 ps-5" style="background-color: rgb(21, 21, 86)">
         <div class="d-flex justify-content-between align-content-center" id="data">
           <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
