--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -23,8 +23,8 @@
         <div class="d-flex justify-content-between align-content-center" id="data">
           <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
           <div class="d-flex w-75 float-end">
-            <div class="w-25 mx-2 bg-success rounded-2 text-center align-content-center fw-bold fs-4" id="p">P</div>
-            <div class="w-25 bg-danger rounded-2 text-center align-content-center fw-bold fs-4" id="a">A</div>
+            <div class="w-25 mx-2 rounded-2 text-center align-content-center fw-bold fs-4" id="p">P</div>
+            <div class="w-25 rounded-2 text-center align-content-center fw-bold fs-4" id="a">A</div>
           </div>
         </div>
       </div>
