--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container w-75" style="background-color: rgb(192, 134, 246)">
-      <div class="container d-flex fw-bold fs-3 text-center ">
+      <div class="container d-flex fw-bold fs-3 text-center " style="margin-left: 200px;" >
           Mark Attendance
           <button class="btn btn-success fw-bold fs-5" onclick="submit()">Submit</button> 
           <button class="btn btn-primary fw-bold fs-5" onclick="add()">Add Student</button> 
@@ -23,8 +23,8 @@
         <div class="d-flex justify-content-between align-content-center" id="data">
           <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
           <div class="d-flex w-75 float-end">
-            <div class="w-25 mx-2 rounded-2 text-center align-content-center fw-bold fs-4" id="p">P</div>
-            <div class="w-25 rounded-2 text-center align-content-center fw-bold fs-4" id="a">A</div>
+            <button class="w-25 btn mx-2 my-2 rounded-2 text-center align-content-center fw-bold fs-4" style="border: 1px solid black;" id="p">P</button>
+            <button class="w-25 btn rounded-2 my-2  text-center align-content-center fw-bold fs-4" style="border: 1px solid black;" id="a">A</button>
           </div>
         </div>
       </div>
