--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -20,6 +20,10 @@
           <button class="btn btn-primary fw-bold fs-5 mx-3 border-5" onclick="add()">Add Student</button> 
           <button class="btn btn-secondary fw-bold fs-5 mx-3 border-5" onclick="take()">Take Attendance</button> 
       </div>
+      <div class="container text-center fw-bold w-50 my-5">
+        <label for="name" class="form-control bg-transparent">Name</label>
+        <input type="text" name="name" id="name" placeholder="Enter Student Name" class="form-control">
+      </div>
       <div class="container w-50 ps-5 rounded-3" style="background-color: rgb(21, 21, 86)">
         <div class="d-flex justify-content-between align-content-center" id="data">
           <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
