--- a/attendanceTask/add.html
+++ b/attendanceTask/add.html
@@ -12,12 +12,14 @@
     />
     <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body style="background-color: aqua;">
 
     
-      <div class="container text-center fw-bold w-50 my-5">
-        <label for="name" class="form-control bg-transparent">Name</label>
-        <input type="text" name="name" id="name" placeholder="Enter Student Name" class="form-control">
+      <div class="container text-center fw-bold w-50 my-5 py-5 rounded-4" style="background-color: blueviolet; border: 1px solid #000;">
+        <label for="name" class="form-control text-light fw-bold fs-5 bg-transparent">Name</label>
+        <input type="text" name="name" id="name" placeholder="Enter Student Name" class="fw-bold fs-6 form-control">
+
+        <button class="btn btn-success fw-bold fs-5 mx-3 border-5 my-5" onclick="done()">Done</button>
       </div>
  
 
