--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container w-75 py-5" style="background-color: rgb(192, 134, 246)">
-      <div class="container d-flex fw-bold fs-3 text-center mb-5" style="margin-left: 400px;" >
+    <div class="container w-75 py-5 rounded-5" style="background-color: rgb(192, 134, 246); border: 1px solid black;">
+      <div class="container d-flex fw-bold fs-3 text-center mb-5" style="margin-left: 300px;" >
           Mark Attendance
           <button class="btn btn-success fw-bold fs-5 mx-3 border-5" onclick="submit()">Submit</button> 
           <button class="btn btn-primary fw-bold fs-5 mx-3 border-5" onclick="add()">Add Student</button> 
           <button class="btn btn-secondary fw-bold fs-5 mx-3 border-5" onclick="take()">Take Attendance</button> 
       </div>
-      <div class="container w-50 ps-5 rounded-3" style="background-color: rgb(21, 21, 86)">
-        <div class="d-flex justify-content-between align-content-center" id="data">
+      <div class="container w-50 ps-5 rounded-3" style="background-color: rgb(21, 21, 86); border: 1px solid white;">
+        <div class="d-flex justify-content-between align-content-center" id="data" style="border-bottom: 1px solid gainsboro;">
           <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
           <div class="d-flex w-75 float-end">
             <button class="w-25 btn mx-2 my-2 rounded-2 text-center align-content-center fw-bold fs-4 text-light" style="border: 1px solid white;" id="p">P</button>
