--- a/attendanceTask/index.html
+++ b/attendanceTask/index.html
@@ -20,7 +20,7 @@
           <button class="btn btn-primary fw-bold fs-5 mx-3 border-5" onclick="add()">Add Student</button> 
           <button class="btn btn-secondary fw-bold fs-5 mx-3 border-5" onclick="take()">Take Attendance</button> 
       </div>
-      <div class="container w-50 ps-5 rounded-3" style="background-color: rgb(21, 21, 86); border: 1px solid white;">
+      <div id="main" class="container w-50 ps-5 rounded-3" style="background-color: rgb(21, 21, 86); border: 1px solid white;">
         <div class="d-flex justify-content-between align-content-center" id="data" style="border-bottom: 1px solid gainsboro;">
           <p class="w-100 text-light align-content-center fs-4" id="name">Sumit Meena</p>
           <div class="d-flex w-75 float-end">
