--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -24,8 +24,8 @@
       Mousam Ka Haal  🍃🌧☔💦 🌧🌿❄️ 
     </div>
 
-    <main>
-      <div class="container w-50 mx-auto border-1 rounded-3 shadow p-3 mt-3 py-4">
+    <main class="container w-50">
+      <div class="container w-50 mx-auto border-1 rounded-3 shadow p-3 mt-3 py-4" style="border: 1px solid black;">
         <div class="container opacity-50 text-dark fw-bold fs-4 text-center my-2">
         Get Live Update Of Weather In Your Area!
       </div>
