--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -24,8 +24,8 @@
       Mousam Ka Haal  🍃🌧☔💦 🌧🌿❄️ 
     </div>
 
-    <main class="container w-50">
-      <div class="container w-50 mx-auto border-1 rounded-3 shadow p-3 mt-3 py-4" style="border: 1px solid black;">
+    <main class="container w-50 shadow rounded-3 py-3" style="background-color: rgb(183, 139, 224);">
+      <div class="container w-50 mx-auto border-1 rounded-3 shadow p-3 mt-3 py-4" style="border: 1px solid black; background-color: rgb(78, 78, 135);">
         <div class="container opacity-50 text-dark fw-bold fs-4 text-center my-2">
         Get Live Update Of Weather In Your Area!
       </div>
@@ -33,7 +33,7 @@
           <input type="text" name="city" class="form-control" id="city" placeholder="City Name">
         <button class="btn btn-primary w-25 fw-bold form-control" onclick="getWeather()">Get Weather</button>
         </div>
-        <div class="d-flex text-dark justify-content-between my-5" id="weatherData">
+        <div class="d-flex text-light justify-content-between my-5" id="weatherData">
           
         </div>
       </div>
