--- a/Jokes/index.html
+++ b/Jokes/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jokes</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -15,23 +15,31 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="bg-primary p-2 text-center fs-4 fw-bold text-light">
-        Jokes Ka Pitara
+      Jokes Ka Pitara
     </div>
 
     <main class="container w-50">
-    
-        <div class="container p-3 border shadow mt-3 rounded-3">
-            <!-- area for Jokes -->
-             <p class="" id="setup"></p>
-             <p id="punchline"></p> <br> <hr>
-            <button class="btn btn-primary fw-bold " onclick="newJoke()">Get Random Jokes</button>
-        </div>
+      <div class="container p-3 border shadow mt-3 rounded-3">
+        <!-- area for Jokes -->
+        <p class="fs-3" id="setup">Lets Get A Lough Together</p>
+        <p id="photo">
+          <img
+            src="https://img.freepik.com/premium-vector/dizzy-emoji-vector-character-dizzy-clipart-design-crazy-funny-naughty-facial-expressions_572293-5653.jpg?semt=ais_hybrid&w=740&q=80"
+            alt=""
+            width="400px"
+          />
+        </p>
+        <p id="punchline" class="fs-3"></p>
+        <br />
+        <hr />
+        <button class="container btn btn-primary fw-bold" onclick="newJoke()">
+          Get Random Jokes
+        </button>
+      </div>
     </main>
-
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
@@ -39,5 +47,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
