--- a/fakeStore/index.html
+++ b/fakeStore/index.html
@@ -29,6 +29,7 @@
                 <a href="product.html" class="text-decoration-none text-light fw-bold fs-4">Products</a>
                 <a href="about.html" class="text-decoration-none text-light fw-bold fs-4 ">About</a>
                 <a href="contact.html" class="text-decoration-none text-light fw-bold fs-4">Contact</a>
+                <a href="product2.html" class="text-decoration-none text-light fw-bold fs-4">Product2</a>
             </div>
 
         </nav>
