--- a/fakeStore/contact.html
+++ b/fakeStore/contact.html
@@ -18,20 +18,36 @@
   </head>
   <body>
     <header>
-        <nav class="navbar bg-primary px-3">
-            <div class="navbar-brand fw-bold fs-4 text-light">
-                Fake Store
+      <nav class="navbar bg-primary px-3">
+        <div class="navbar-brand fw-bold fs-4 text-light">Fake Store</div>
 
-            </div>
-
-            <div class="nav-link d-flex gap-4">
-                <a href="index.html" class="text-decoration-none text-light fw-bold fs-4 ">Home</a>
-                <a href="product.html" class="text-decoration-none text-light fw-bold fs-4">Products</a>
-                <a href="about.html" class="text-decoration-none text-light fw-bold fs-4 ">About</a>
-                <a href="contact.html" class="text-decoration-none text-warning fw-bold fs-4">Contact</a>
-            </div>
-
-        </nav>
+        <div class="nav-link d-flex gap-4">
+          <a
+            href="index.html"
+            class="text-decoration-none text-light fw-bold fs-4"
+            >Home</a
+          >
+          <a
+            href="product.html"
+            class="text-decoration-none text-light fw-bold fs-4"
+            >Products</a
+          >
+          <a
+            href="about.html"
+            class="text-decoration-none text-light fw-bold fs-4"
+            >About</a
+          >
+          <a
+            href="contact.html"
+            class="text-decoration-none text-warning fw-bold fs-4"
+            >Contact</a
+          ><a
+            href="product2.html"
+            class="text-decoration-none text-warning fw-bold fs-4"
+            >Products2</a
+          >
+        </div>
+      </nav>
     </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
