--- a/fakeStore/product2.html
+++ b/fakeStore/product2.html
@@ -62,7 +62,7 @@
                 <div class="fw-semibold">3.4/5</div>
                 <div class="fw-bold fs-5">5000.00</div>
                 <div class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora saepe soluta vitae blanditiis at vero, dolorum corporis, omnis eveniet nulla minima. Adipisci corporis vel excepturi vitae sequi voluptate! Ducimus?</div>
-                <div class="d-flex justify-content-center gap-3">
+                <div class="d-flex justify-content-start gap-3">
                     <button class="btn btn-outline-primary">Add tO Cart</button>
                     <button class="btn btn-primary">Buy Now</button>
                 </div>
