--- a/fakeStore/product.html
+++ b/fakeStore/product.html
@@ -33,6 +33,11 @@
             >Products</a
           >
           <a
+            href="product2.html"
+            class="text-decoration-none text-light fw-bold fs-4"
+            >Products</a
+          >
+          <a
             href="about.html"
             class="text-decoration-none text-light fw-bold fs-4"
             >About</a
