--- a/fakeStore/contact.html
+++ b/fakeStore/contact.html
@@ -34,7 +34,7 @@
           >
           <a
             href="product2.html"
-            class="text-decoration-none text-warning fw-bold fs-4"
+            class="text-decoration-none text-light fw-bold fs-4"
             >Products2</a
           >
           <a
