--- a/fakeStore/product.html
+++ b/fakeStore/product.html
@@ -35,7 +35,7 @@
           <a
             href="product2.html"
             class="text-decoration-none text-light fw-bold fs-4"
-            >Products</a
+            >Products2</a
           >
           <a
             href="about.html"
